Dev/somthint (#34)
* Jester logic for special function card

* Implement swap card with next player

* Improve addition algo

* ooopsi

* Add missing logic

* commented out the brocken things